# Qube

./: .gitignore  CMakeLists.txt  README.md  TODO.md
media/assets/qbt/: ground_tile1.qbt  pikachu.qbt  test_model.qbt  test_model2.qbt  test_model3.qbt  test_model4.qbt  test_model5.qbt
media/config/: settings.ini
media/shaders/: Depth.vertex  NormalsDrawing.geometry  PositionColor.fragment  PositionColor.vertex  PositionColorNormal.fragment  PositionColorNormal.vertex  Shadow.fragment  Shadow.vertex  Text.fragment  Text.vertex
project/vs2015/: Qube.sln  Qube.vcxproj  Qube.vcxproj.filters
source/: CMakeLists.txt  QubeCamera.cpp  QubeControls.cpp  QubeGUI.cpp  QubeGame.cpp  QubeGame.h  QubeInput.cpp  QubeRender.cpp  QubeSettings.cpp  QubeSettings.h  QubeUpdate.cpp  QubeWindow.cpp  QubeWindow.h  main.cpp
source/Maths/: 3dGeometry.h  3dmaths.cpp  3dmaths.h  Bezier3.cpp  Bezier4.cpp  Line3D.cpp  Plane3D.cpp  matrix4x4.cpp
source/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  camera.cpp  camera.h  colour.cpp  colour.h  light.h  material.h  viewport.h
source/freetype/: freetypefont.cpp  freetypefont.h
source/glfw/libs/2015/d/: glfw3.lib  glfw3_64.lib
source/glfw/libs/2015/r/: glfw3.lib  glfw3_64.lib
source/ini/: ini.c
source/nanogui/: CMakeLists.txt
source/nanogui/libs/: nanogui_64.lib  nanoguid_64.lib
source/nanovg/: CMakeLists.txt  perf.c
source/qbt/: QBT.cpp  QBT.h
source/zlib/libs/: zlib_64.lib  zlibd_64.lib
